--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 	<head></head>
-	<body>
-		<div>
-			<a href="http://www.apchqmontreal.ca/index.html">APCHQ Montreal</a>
+	<body style="background-color: #000;">
+		<div style="text-align: center;padding: 20px 0;">
+			<a href="http://www.apchqmontreal.ca/index.html" style="color: #fff;" target="_blank">APCHQ Montreal</a>
 		</div>
-		<div>
-			<a href="http://www.apchqmontreal.ca/service.html">Services aux membres</a>
+		<div style="text-align: center;padding: 20px 0;">
+			<a href="http://www.apchqmontreal.ca/service.html" style="color: #fff;">Services aux membres</a>
 		</div>
 	</body>
 </html>
