--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 		<div style="text-align: center;padding: 20px 0;">
 			<a href="http://www.apchqmontreal.ca/service.html" style="color: #fff;">Services aux membres</a>
 		</div>
+		<div style="text-align: center;padding: 20px 0;">
+			<a href="http://www.apchqmontreal.ca/index.html" style="color: #fff;" target="_system">APCHQ Montreal</a>
+		</div>
 	</body>
 </html>
